# flat-bug

./: .buildinfo  .gitattributes  .gitignore  README.md  README_sphinx.html  augmentations.html  cli.html  coco_utils.html  config.html  custom_yolo_augmentations.py  data.yaml  datasets.html  eval_utils.html  extract_insects.py  genindex.html  geometric.html  get_dataset.py  index.html  nms.html  objects.inv  predict_all.py  predictor.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.ipynb  test.py  test_profile.py  trainers.html  yolo_helpers.html
.github/workflows/: build_docs.yml  run-tests.yml
_sources/: README_sphinx.md.txt  cli.rst.txt  nms.rst.txt
datatset_utils/: request_jarrett.md  request_template.md
dev/output/: AMI_storage_avjf_denmark_OH1_20230630_file_index.txt  coco_dataset.json
docs/: README.md  flat-bug.ipynb
docs/source/: augmentations.rst  coco_utils.rst  conf.py  config.rst  datasets.rst  eval_utils.rst  geometric.rst  index.md  index.rst  (+3 more)
prototypes/: active_contour.py  classif_post_hoc.py  clean_up_end_to_end_eval.py  compare_preds.py  count_recursive_crops.py  custom_yolo_augmentations.py  eval-metrics.R  eval.sh  extract_insects.py  mopho_features.py  pre-annotate.py  predict_all.py  predictor.py  prepare_environment_for_end_to_end_eval.py  sam_test.py  test_data_loader.py  test_profile.py  todel.py  unet.py  update_coco.py
src/: setup.py
utils/: compare_models.sh  compare_models_test.sh  eval_slurm.sh  fast_delete_directory.sh  pred_erda_slurm.sh  slurm.sh  train_backbone_sizes.sh  zip_output_for_ERDA.sh
(+102 files in other folders)
